--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^0.6.0
+  provider: ^5.0.0
+  firebase_auth: ^1.0.2
+  google_sign_in: 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
 
 dev_dependencies:
   flutter_test:
