--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,15 +18,18 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_slidable: ^0.6.0
   provider: ^5.0.0
-  firebase_auth: ^1.0.2
-  google_sign_in: 
+  # firebase_auth: ^1.0.2
+  firebase_auth: ^1.0.1
+  firebase_core : ^1.0.2
+  cloud_firestore: ^3.1.0
+  # google_sign_in: 
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +40,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,15 +69,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    #  - family: Schyler
+     
+    #    fonts:
+    #      - asset: fonts/Schyler-Regular.ttf
+    #      - asset: fonts/Schyler-Italic.ttf
+    #        style: italic
+    # # - family: Pacifico
+    # #   fonts:
+    # #     - asset: fonts/Pacifico-Regular.ttf
+    #  - family: Pacifico
+    #    fonts:
+    #      - asset: fonts/Pacifico-Regular.ttf
+     - family: DancingScript 
+       fonts:
+         - asset: assets/dancing_script/DancingScript-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
